# claude

./: .env.template  .gitignore  CLAUDE.md  README.md  plugin.yaml  pytest.ini  requirements.txt
.claude/: mcp-credentials.env.template  settings.json  statusline.py  test-cases.json  track.py
.claude-plugin/: marketplace.json
.github/: CHECKLIST_STANDARD.md  pull_request_template.md
.omc/: omc-plugin-version.json  ralplan-state.json  ultrawork-state.json
archive-analyzer/: .env.example  .gitignore  CLAUDE.md  WORKER_GUIDE.md
automation_aep_csv/: CLAUDE.md
config/: drive_projects.yaml
docs/: .bkit-memory.json  .pdca-status.json  AGENTS_REFERENCE.md  AUTO_SUGGESTION_WORKFLOW.md  BUG_REPORT_TMPCLAUDE.md  CHANGELOG-CLAUDE.md  CHECKLIST.md  COMMAND_REFERENCE.md  (+13 more)
gfx_json/: .env.example  .env.lan.example  .gitignore  Dockerfile  docker-compose.lan.yml  docker-compose.yml  pyproject.toml
gfx_json/dashboard/: package-lock.json  package.json  tsconfig.tsbuildinfo
gfx_json/dashboard/lib/: supabase.ts
gfx_json/docs/: LAN_DEPLOYMENT.md  NAS-INSTALLATION-GUIDE.md  gfx_supabase_sync.md
gfx_json/migrations/: 001_create_normalized_tables.sql
gfx_json/src/sync_agent/: config.py  main_v3.py  sync_service.py
gfx_json/src/sync_agent/core/: json_parser.py
gfx_json/src/sync_agent/models/: event.py  hand.py  player.py
gfx_json/src/sync_agent/repositories/: hand_player_repo.py  hand_repo.py
gfx_json/src/sync_agent/transformers/: hand_transformer.py  player_transformer.py
gfx_json/tasks/prds/: 0007-prd-sync-reliability.md
gfx_json/tests/: test_json_parser.py
(+1022 files in other folders)
